syntax = "proto3";

package ibc.core.channel.v1;

option go_package = "github.com/cosmos/ibc-go/v4/modules/core/04-channel/types";

import "gogoproto/gogo.proto";
import "ibc/core/client/v1/client.proto";

// UpgradeTimeout defines a type which encapsulates the upgrade timeout values at which the counterparty
// must no longer proceed with the upgrade handshake.
message UpgradeTimeout {
  // block height after which the upgrade times out
  ibc.core.client.v1.Height timeout_height = 1
      [(gogoproto.moretags) = "yaml:\"timeout_height\"", (gogoproto.nullable) = false];
  // block timestamp (in nanoseconds) after which the upgrade times out
  uint64 timeout_timestamp = 2 [(gogoproto.moretags) = "yaml:\"timeout_timestamp\""];
}

// ErrorReceipt defines a type which encapsulates the upgrade sequence and error associated with the
// upgrade handshake failure. When a channel upgrade handshake is aborted both chains are expected to increment to the
// next sequence.
message ErrorReceipt {
  // the channel upgrade sequence
  uint64 sequence = 1;
  // the error message detailing the cause of failure
  string error = 2;
}
